# UCE-Nexus-Monorepo

./: .gitattributes  .gitignore  CLAUDE.md  QA-Postman-Collection.json  README.md  UCE_Nexus_QA_Postman_Collection.json  check_ec2.py  deploy_ssm.py  jira_uce_nexus_import.csv  package-lock.json  package.json  setup_env.py  turbo.json
.github/Workflows/: ci.yml
.github/workflows/: ci.yml  deploy.yml  keycloak-user.yml  pr-automation.yml  release.yml  sonarqube.yml
apps/web-academic/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
apps/web-campus/: dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web-chatbot/: dockerfile  index.html  package.json  vite.config.ts
apps/web-host/: dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web-payments/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
infra/docker/: docker-compose.db.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
infra/terraform/: main.tf
scripts/: dev.js  migrate_legacy_data.js
services/ms-01-gateway/: .dockerignore  README.md  dockerfile  (+5 more)
services/ms-09-geocampus/: .dockerignore  Cargo.toml  Dockerfile  README.md  campus_graph.json  demo.html  package.json  simulator.js
services/ms-09-geocampus/src/: db.rs  graph.rs  main.rs
services/ms-11-catalog/: Cargo.toml  README.md  build.rs  dockerfile  package.json
services/ms-11-catalog/proto/: catalog.proto
services/ms-11-catalog/src/: db.rs  main.rs
(+158 files in other folders)
