[package]
name = "ms-11-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.10"
